Changelog
=========


1.1.3 (unreleased)
------------------

- Added a GenericSetup Uninstall profile [macagua]

- Added Spanish translation [macagua]

- Enabled the i18n support [macagua]



1.1.2 (03.30.2016)
-------------------

- Renamed the control panel
- Removed Pastescript dependency



1.1 (07.23.2015)
-------------------

- Added icon



1.0.1 (05.09.2013)
-------------------

- Initial release