@@ -5,6 +5,9 @@ Changelog
 1.1.3 (unreleased)
 ------------------
 
+- Fixed warning: manifest_maker: MANIFEST.in, line 3: 'recursive-exclude' 
+  expects '<dir> <pattern1> <pattern2>' from MANIFEST.in file [macagua]
+
 - Added a GenericSetup Uninstall profile [macagua]
 
 - Added Spanish translation [macagua]
